--- a/product.html
+++ b/product.html
@@ -69,7 +69,7 @@
 		</div>
 
 		<section id="sec-14" class="mb_4">
-			<div class="container">
+			<div class="container position-relative">
 				<h1 class="inner text-start mb-5">MATRIX / Кондиционер KEEP ME VIVID для глазурирования и блеска волос, 300 мл</h1>
 				<div class="row">
 					<div class="col-1 d-none d-md-flex flex-column justify-content-center">
@@ -164,7 +164,7 @@
 						<div class="font-2 fw_6 mb-2">Цена</div>
 						<div class="font-2 f_13 lightest-gray text-decoration-line-through mb-2">732 ₽</div>
 						<div class="font-2 f_15 fw_5 mb-4">632 ₽</div>
-						<button type="button" class="btn_main btn_1 mb-3">
+						<button type="button" class="btn_main btn_1 btn-to-cart mb-3">
 							<img src="img/icons/cart.svg" alt="В корзину" class="me-3">
 							<span class="text-capitalize">В корзину</span>
 						</button>
@@ -192,6 +192,18 @@
 						</div>
 						<button type="button" data-state="off" onclick="readall(this)" class="font-2 bb_1 f_08 accent mt-1">развернуть</button>
 					</div>
+				</div>
+				<div class="mobile-btns">
+					<button type="button" class="btn_main btn_1 btn-to-cart">
+						<img src="img/icons/cart.svg" alt="В корзину" class="me-2">
+						<span class="text-capitalize">В корзину</span>
+					</button>
+					<button type="button" class="btn_main btn_2 btn-fav py-2 ms-2" onclick="toggleState(this)" data-state="off">
+						<svg class="me-2" viewBox="0 0 41 35" xmlns="http://www.w3.org/2000/svg">
+							<path d="M36.2764 4.35411L36.2767 4.35445C37.1419 5.21925 37.8283 6.24604 38.2965 7.37617C38.7648 8.5063 39.0058 9.71762 39.0058 10.9409C39.0058 12.1642 38.7648 13.3755 38.2965 14.5057C37.8283 15.6358 37.1419 16.6626 36.2767 17.5274L36.2766 17.5276L34.2891 19.5151L20.4087 33.3955L6.52828 19.5151L4.54078 17.5276C2.79389 15.7807 1.8125 13.4114 1.8125 10.9409C1.8125 8.47045 2.79389 6.10117 4.54078 4.35428C6.28766 2.60739 8.65695 1.626 11.1274 1.626C13.5979 1.626 15.9672 2.60739 17.7141 4.35428L19.7016 6.34178L20.4087 7.04889L21.1158 6.34178L23.1033 4.35428L23.1034 4.35411C23.9682 3.4889 24.995 2.80256 26.1252 2.33429C27.2553 1.86602 28.4666 1.625 29.6899 1.625C30.9132 1.625 32.1245 1.86602 33.2547 2.33429C34.3848 2.80256 35.4116 3.48891 36.2764 4.35411Z"/>
+						</svg>								
+						<span class="text-capitalize"></span>
+					</button>
 				</div>
 			</div>
 		</section>
