--- a/services.html
+++ b/services.html
@@ -73,68 +73,56 @@
 				<div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 justify-content-center justify-content-md-start g-0 mb-4">
 					<div>
 						<a href="service-page.html" class="serv">
-							<img src="img/serv1.jpg" alt="">
+							<img src="img/Стрижка.jpg" alt="">
 							<div>Стрижка</div>
 						</a>
 					</div>
 					<div>
 						<a href="service-page.html" class="serv">
-							<img src="img/serv2.jpg" alt="">
-							<div>Маникюр/Педикюр</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv3.jpg" alt="">
-							<div>Наращивание ресниц</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv4.jpg" alt="">
-							<div>Оформление бровей</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv5.jpg" alt="">
+							<img src="img/Окрашивание.jpg" alt="">
 							<div>Окрашивание</div>
 						</a>
 					</div>
 					<div>
 						<a href="service-page.html" class="serv">
-							<img src="img/serv6.jpg" alt="">
-							<div>Косметология</div>
+							<img src="img/Уход для волос.jpg" alt="">
+							<div>Уход для волос</div>
 						</a>
 					</div>
 					<div>
 						<a href="service-page.html" class="serv">
-							<img src="img/serv7.jpg" alt="">
+							<img src="img/Эстетическая трихология.jpg" alt="">
+							<div>Эстетическая трихология</div>
+						</a>
+					</div>
+					<div>
+						<a href="service-page.html" class="serv">
+							<img src="img/Ламинирование ресниц.jpg" alt="">
+							<div>Ламинирование ресниц</div>
+						</a>
+					</div>
+					<div>
+						<a href="service-page.html" class="serv">
+							<img src="img/Оформление бровей.jpg" alt="">
+							<div>Оформление бровей</div>
+						</a>
+					</div>
+					<div>
+						<a href="service-page.html" class="serv">
+							<img src="img/Make Up.jpg" alt="">
 							<div>Макияж</div>
 						</a>
 					</div>
 					<div>
 						<a href="service-page.html" class="serv">
-							<img src="img/serv8.jpg" alt="">
-							<div>Эпиляция</div>
+							<img src="img/Маникюр.jpg" alt="">
+							<div>Маникюр</div>
 						</a>
 					</div>
 					<div>
 						<a href="service-page.html" class="serv">
-							<img src="img/serv1.jpg" alt="">
-							<div>Стрижка</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv2.jpg" alt="">
-							<div>Маникюр/Педикюр</div>
-						</a>
-					</div>
-					<div>
-						<a href="service-page.html" class="serv">
-							<img src="img/serv3.jpg" alt="">
-							<div>Наращивание ресниц</div>
+							<img src="img/Педикюр.jpg" alt="">
+							<div>Педикюр</div>
 						</a>
 					</div>
 				</div>
