--- a/contacts.html
+++ b/contacts.html
@@ -97,7 +97,7 @@
 							</div>
 							<div class="col-12 mt-4 mt-md-0">
 								<div class="d-none d-md-block font-2 fw_7 mt-3 mt-sm-4 mb-1 mb-sm-3">Мы в социальных сетях:</div>
-								<div class="social">
+								<div class="social justify-content-md-start">
 									<a href="#">
 										<svg viewBox="0 0 25 24" xmlns="http://www.w3.org/2000/svg">
 											<path d="M17.4531 2H7.44792C4.68506 2 2.44531 4.23858 2.44531 7V17C2.44531 19.7614 4.68506 22 7.44792 22H17.4531C20.216 22 22.4557 19.7614 22.4557 17V7C22.4557 4.23858 20.216 2 17.4531 2Z"></path>
@@ -131,7 +131,7 @@
 				<div class="d-block d-md-none mt-4">
 					<button type="button" class="btn_main btn_2 w-100 mt-2"><span class="f_09 light-gray">Написать в TELEGRAM</span></button>
 					<button type="button" class="btn_main btn_2 w-100 mt-2"><span class="f_09 light-gray">Написать в WHATSAPP</span></button>
-					<button type="button" class="btn_main btn_1 w-100 mt-2"><span class="f_09">Позвонить</span></button>
+					<a href="tel:" class="btn_main btn_1 w-100 mt-2"><span class="f_09">Позвонить</span></a>
 				</div>
 			</div>
 		</section>
