--- a/index.html
+++ b/index.html
@@ -914,6 +914,12 @@
 						</div>
 					</div>
 				</form>
+				<button type="button" class="btn-close" data-bs-dismiss="modal">
+					<svg viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+						<path d="M23.0001 2.99995L13.345 12.9999L23.0001 22.9999"/>
+						<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
+					</svg>
+				</button>
 			</div>
 		</div>
 	</div>
@@ -928,6 +934,12 @@
 					<textarea name="" rows="3" placeholder="Комментарий" class="w-100 mb-4"></textarea>
 					<button type="submit" class="btn_main btn_1">Отправить</button>
 				</form>
+				<button type="button" class="btn-close" data-bs-dismiss="modal">
+					<svg viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+						<path d="M23.0001 2.99995L13.345 12.9999L23.0001 22.9999"/>
+						<path d="M2.99997 22.9999L13.3447 13L2.99997 3"/>
+					</svg>
+				</button>
 			</div>
 		</div>
 	</div>
